Clean up script and fix text overflow
Updated node_helper with cleaner JS, also fixed CSS for text overflow.

--- a/css/board.css
+++ b/css/board.css
@@ -8,6 +8,12 @@
     min-width: 40px !important;
 }
 
+.departure-board .destination-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 200px;
+}
+
 .departure-board td {
     min-width: 70px;
 }
